<resources>
    <string name="app_name">Masther Thesis</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="passord">Passord</string>
    <string name="repassword">RePassword</string>
    <string name="register">Register</string>
    <string name="have_account_login_here">Have account? login here</string>
    <string name="no_account_create_account_here">No account? create account here</string>
    <string name="login">Login</string>
    <string name="account_login">Account Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mmailen">Mmailen</string>
    <string name="send_email">Send Email</string>
    <string name="inbox">Inbox</string>
    <string name="log_out">Log Out</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="reciever">Reciever</string>
    <string name="send">Send</string>
    <string name="MastherThesis" />
</resources>